--- a/app/views/menus/teacher/_workbench.html.haml
+++ b/app/views/menus/teacher/_workbench.html.haml
@@ -6,6 +6,11 @@
     = simple_link :for => "Upload Questions", :id => 'lnk-upload-suggestion'
   %li
     = simple_link :for => "Manage Section / Study Groups", :id => 'lnk-mng-sektions'
+  %li
+    %a{ :href => "#{server}/winbot/app.publish/winbot.application"}
+      Scanning Application (Windows)
+    %p.footnote
+      Use to send scans to Gradians.com. Download on the PC connected to your scanner
 -#
   %li
     = simple_link :for => "Using suggestion form", :id => 'lnk-suggestion-form',
