--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -165,8 +165,8 @@ $green: #347235 ; // rgb(87,188,32)
   background: $deep-blue ;
   float: right ;
   margin-top: 5px ;
-  height: 10px ;
-  padding: 9px 13px 12px 13px ;
+  height: 12px ;
+  padding: 13px 15px ; 
   border-radius: 4px ;
 } 
 
