minor styling change

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,7 +33,7 @@
                       %input.input-medium{ :type => :text, :name => "account[login]", :placeholder => "Email"}
                       .input-append
                         %input.input-medium{ :type => :password, :name => "account[password]", :placeholder => "Password" }
-                        %button.btn.btn-large.btn-info{ :type => :submit }= "Sign In"
+                        %button.btn.btn-large.btn-primary{ :type => :submit }= "Sign In"
                 %li.dropdown{ :id => 'register' }
                   = simple_link :for => "Register",  :id => "m-registrations", :as => :dropdown
                 -#%li
