Allow for disabling of control panel dropdowns. Needed during tutorials

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -479,6 +479,9 @@ button[data-toggle='button'] {
   ul {
     margin-top: 15px ;
   }
+  .dropdown-toggle {
+    &.disabled { color: $lightgray ; }
+  }
 } 
 
 #desktop { 
