--- a/app/views/teachers/_qzb-topics.html.haml
+++ b/app/views/teachers/_qzb-topics.html.haml
@@ -16,7 +16,7 @@
         :name => "filter[repeated]", :for => 'ignore used'
 
   %div.tabbable.tabs-left{ :id => "#{context}-verticals-tab" }
-    %ul.nav.nav-tabs.span4.purge-skip.nopurge-ever
+    %ul.nav.nav-tabs.span4.purge-skip.nopurge-ever{ :id => "#{context}-help-pt-1" }
       - Vertical.all.each do |m|
         %li{ :marker => "#{m.id}" }
           = simple_link :for => "#{m.name}", :toggle => :tab, 
