--- a/app/views/tutorials/teacher/qzb/_one.html.haml
+++ b/app/views/tutorials/teacher/qzb/_one.html.haml
@@ -1,5 +1,5 @@
 
 
 %ol.hide{ :id => 'qzb-step-1', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
-  %li{ :data => { :id => 'm-teacher-quizzes', :options => "nextButton:'false';timer:2000" }} 
+  %li{ :data => { :id => 'm-teacher-quizzes' } }
     %p= "Click here and then select 'new' from the menu"
