--- a/app/views/tutorials/teacher/qzb/_two.html.haml
+++ b/app/views/tutorials/teacher/qzb/_two.html.haml
@@ -1,6 +1,6 @@
 
 %ol.hide{ :id => 'qzb-step-2', :data => { :enable => 'm-teacher-quizzes' }}
-  %li{ :data => { :id => 'qzb-help-pt-1', :button => "Got it!" } }
+  %li{ :data => { :id => 'qzb-help-pt-1' } }
     %p
       These are the broad areas of study - or <b>verticals</b> as we like 
       to call them
@@ -11,7 +11,7 @@
       For now, try clicking on the verticals - shown alongside - and see a list 
       of topics load. When 
 
-  %li{ :data => { :id => 'qzb-verticals-tab', :button => "Got it!" } }
+  %li{ :data => { :id => 'qzb-verticals-tab' } }
     %p
       From the list of topics shown alongside, 
       select topics that you want to see questions on <b>by clicking
@@ -19,4 +19,7 @@
     %p
       <b>You can pick topics that are in different verticals</b>.
       Try doing that too
+
+  %li{ :data => { :id => 'qzb-tab1-btn-show', :options => "tipLocation:top;nubPosition:bottom" } }
+    %p= "Click to start seeing questions"
     
