--- a/app/views/modals/teacher/_suggestion.html.haml
+++ b/app/views/modals/teacher/_suggestion.html.haml
@@ -7,17 +7,15 @@
     #instruction
       %p.lead
         Browse to a file on your computer to upload it for type setting. 
-        It doesn't matter if it is a .txt, .doc, .docx, .pdf or any other
+        Doesn't matter if it is a jpg, txt, doc, docx, pdf or any other
         file format, as long as it follows the following simple rules:
       %ul
-        %li It contains the Question in it's entirety 
+        %li It contains the Question in it's entirety and a numerical answer, if any, for cross-checking purposes
+        %li It does NOT cite references such as books or papers as we cannot honor these 
         %li 
           If there is a preferred solution, it is provided alongside (if not, we will solve it). 
-          %ul
-            %li At any rate, please be sure to provide numerical answers if any for cross-checking purposes
-        %li It does not cite references such as books or papers. We cannot honor these 
     %br
-    %form{ :id => "suggestiondoc", :enctype => "multipart/form-data" }
+    %form.center{ :id => "suggestiondoc", :enctype => "multipart/form-data" }
       .control-group
         .controls
           %input.required{ :type => :file, :id => "suggestiondoc[inputfile]", :name => "suggestiondoc[inputfile]" , :placeholder => "browse for file" }
