[joyride]: Trying to standardize IDs of joyride milestones
As the plugin relies heavily on IDs, IDs need to be provided.
But without some sort of a naming scheme, the whole thing can
soon go out of hand

So, for now, using the following naming scheme for DOM objects
   <context>-[<element-type]-milestone-<N>

[element-type] is for when a link, a button or any DOM element is
in play

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -27,8 +27,8 @@
 
 - content_for :tutorials do 
   #tutorials
-    = render :partial => 'tutorials/teacher/qzb/one'
-    = render :partial => 'tutorials/teacher/qzb/two'
+    - ['one', 'two', 'three', 'four'].each do |m|
+      = render :partial => "tutorials/teacher/qzb/#{m}"
     = render :partial => 'tutorials/teacher/make-a-ws'
 
 !!!5
