--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -3,10 +3,11 @@
   %li.nav-header= "How do I ...?"
   %li
     = simple_link :for => "Make a Quiz", :id => 'help-make-a-quiz', 
-      :class => 'help-launcher', :launch => 'qzb-step-1'
+      :class => 'help-launcher', :launch => 'qzb-milestone-1'
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
       :class => 'help-launcher', :launch => 'tutorial-make-a-ws'
+-#
   %li
     = simple_link :for => "Make - and publish - a worksheet", :id => 'lnk-howto-1', 
       :href => "#{Gutenberg['server']}/front-desk/howto-guides/create_publish_ws.pdf"
