--- a/app/views/menus/teacher/_qz-main.html.haml
+++ b/app/views/menus/teacher/_qz-main.html.haml
@@ -4,7 +4,7 @@
 %ul#teacher-quiz.dropdown-menu.pull-right{ :role => :menu }
   %li.nav-header= "Quizzes"
   %li
-    = simple_link :for => "New", :id => "lnk-new-quiz", :launch => 'qzb-step-2'
+    = simple_link :for => "New", :id => "lnk-new-quiz", :launch => 'qzb-milestone-2'
   %li
     = simple_link :for => "List", :id => 'lnk-existing-quiz'
 
