Almost finished tutorial on making a quiz

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -27,7 +27,7 @@
 
 - content_for :tutorials do 
   #tutorials
-    - ['one', 'two', 'three', 'four'].each do |m|
+    - ['one', 'two', 'three', 'four', 'five', 'six'].each do |m|
       = render :partial => "tutorials/teacher/qzb/#{m}"
     = render :partial => 'tutorials/teacher/make-a-ws'
 
