--- a/app/views/tutorials/teacher/qzb/_four.html.haml
+++ b/app/views/tutorials/teacher/qzb/_four.html.haml
@@ -1,4 +1,7 @@
 
 %ol.hide{ :id => 'qzb-milestone-4', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
-  %li{ :data => { :id => 'qzb-btn-milsetone-4', :options => "tipLocation:top;nubPosition:bottom" } }
-    %p= "Click to start seeing questions"
+  %li{ :data => { :id => 'qzb-ul-milestone-4' } }
+    %h6= "#4"
+    %p
+      These are the topics you picked. Click on each to see 
+      questions on that topic
