--- a/app/views/tutorials/teacher/qzb/_one.html.haml
+++ b/app/views/tutorials/teacher/qzb/_one.html.haml
@@ -2,4 +2,6 @@
 
 %ol.hide{ :id => 'qzb-milestone-1', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
   %li{ :data => { :id => 'm-teacher-quizzes' } }
-    %p= "Click here and then select 'new' from the menu"
+    %h6= "#1"
+    %p
+      Click here and then select <b>new</b> from the menu
