--- a/app/views/tutorials/teacher/qzb/_three.html.haml
+++ b/app/views/tutorials/teacher/qzb/_three.html.haml
@@ -1,10 +1,10 @@
 
 %ol.hide{ :id => 'qzb-milestone-3', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
   %li{ :data => { :id => 'qzb-verticals-tab' } }
+    %h6= "#3"
     %p
-      From the list of topics shown alongside, 
-      select topics that you want to see questions on <b>by clicking
-      on the topic name</b>
+      Select topics you would like to see questions on.
+      To pick topics from another vertical, click on that 
+      vertical and then select topics the way you did now
     %p
-      <b>You can pick topics that are in different verticals</b>.
-      Try doing that too
+      When you are done, click the <b>Show Questions</b> button above
