--- a/app/views/tutorials/teacher/qzb/_two.html.haml
+++ b/app/views/tutorials/teacher/qzb/_two.html.haml
@@ -1,15 +1,12 @@
 
 %ol.hide{ :id => 'qzb-milestone-2', :data => { :enable => 'm-teacher-quizzes' }}
   %li{ :data => { :id => 'qzb-ul-milestone-2' } }
+    %h6= "#2"
     %p
-      These are the broad areas of study - or <b>verticals</b> as we like 
-      to call them
-    %p
-      <b>Within verticals</b> are <b>topics</b>. Depending on what topics you 
-      want to cover in a quiz, you will first select verticals - and then topics
-    %p
-      For now, try clicking on the verticals - shown alongside - and see a list 
-      of topics load. When 
+      These are the broad areas of study - or <b>verticals</b>.
+      Within these verticals are topics you can pick for the quiz.
+      We will do that in the next step. For now, click on some 
+      verticals to load the list of topics
 
 
     
