A seventh milestone added to build quiz tutorial

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -28,7 +28,7 @@
 
 - content_for :tutorials do 
   #tutorials
-    - ['one', 'two', 'three', 'four', 'five', 'six'].each do |m|
+    - ['one', 'two', 'three', 'four', 'five', 'six', 'seven'].each do |m|
       = render :partial => "tutorials/teacher/qzb/#{m}"
 
 !!!5
