--- a/app/views/tutorials/teacher/qzb/_three.html.haml
+++ b/app/views/tutorials/teacher/qzb/_three.html.haml
@@ -3,8 +3,10 @@
   %li{ :data => { :id => 'qzb-verticals-tab' } }
     %h6= "#3"
     %p
-      Select topics you would like to see questions on.
-      To pick topics from another vertical, click on that 
-      vertical and then select topics the way you did now
+      Within verticals are <b>topics</b>. Select the topics 
+      you would like to see questions on
+    %p
+      To add topics in other verticals, select those verticals
+      and then pick topics - like you did now
     %p
       When you are done, click the <b>Show Questions</b> button above
