--- a/app/views/tutorials/teacher/qzb/_two.html.haml
+++ b/app/views/tutorials/teacher/qzb/_two.html.haml
@@ -3,10 +3,8 @@
   %li{ :data => { :id => 'qzb-ul-milestone-2' } }
     %h6= "#2"
     %p
-      These are the broad areas of study - or <b>verticals</b>.
-      Within these verticals are topics you can pick for the quiz.
-      We will do that in the next step. For now, click on some 
-      verticals to load the list of topics
+      Select the broad areas of study - or <b>verticals</b> that 
+      you would like to cover in the quiz
 
 
     
