--- a/app/views/tutorials/teacher/qzb/_four.html.haml
+++ b/app/views/tutorials/teacher/qzb/_four.html.haml
@@ -3,5 +3,6 @@
   %li{ :data => { :id => 'qzb-ul-milestone-4' } }
     %h6= "#4"
     %p
-      These are the topics you picked. Click on each to see 
-      questions on that topic
+      These are the topics you picked
+    %p
+      Click on a topic to see questions on it
