First draft of build worksheet tutorial

--- a/app/views/menus/teacher/_per-qz.html.haml
+++ b/app/views/menus/teacher/_per-qz.html.haml
@@ -5,7 +5,7 @@
     = simple_link :for => "add / remove questions", :id => 'lnk-edit-qz'
   %li.nav-header= "Worksheets"
   %li
-    = simple_link :for => "New", :id => 'lnk-wsb-new'
+    = simple_link :for => "New", :id => 'lnk-wsb-new', :launch => 'wsb-milestone-2'
   %li
     = simple_link :for => "List", :id => 'lnk-wsb-existing'
   %li.nav-header= "Download"
