--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -30,6 +30,8 @@
   #tutorials
     - ['one', 'two', 'three', 'four', 'five', 'six', 'seven'].each do |m|
       = render :partial => "tutorials/teacher/qzb/#{m}"
+    - ['one', 'two', 'three'].each do |m|
+      = render :partial => "tutorials/teacher/wsb/#{m}"
 
 !!!5
 
