--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -4,6 +4,9 @@
   %li
     = simple_link :for => "Make a Quiz", :id => 'help-make-a-quiz', 
       :class => 'help-launcher', :launch => 'qzb-milestone-1'
+  %li
+    = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
+      :class => 'help-launcher', :launch => 'wsb-milestone-1'
 -#
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
