--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -1,14 +1,14 @@
 
 -# Left-side tabs - one per section
 #sektions-tab.tabbable.tabs-left
-  %ul.nav.nav-tabs.span3
+  %ul.nav.nav-tabs.span3{ :id => 'wsb-ul-milestone-2' }
     - teacher.sektions.each do |m|
       %li
         = simple_link :for => "#{m.label}", :toggle => :tab, :marker => "#{m.id}",
         :href => "#wsb-sektions", :url => "sektion/students.json?id=#{m.id}"
 
   -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
-  .tab-content.span8
+  .tab-content.span8{ :id => 'wsb-div-milestone-3' }
     = simple_form_for :checked, :remote => true, 
     :html => { :class => 'multi-select', 'data-action' => "#{quiz_assign_path}?id=:id", 'data-id' => 'tab-wsb-quizzes'} do |f|
       .btn-toolbar.purge-skip
