First draft of edit-quiz tutorial added

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -32,6 +32,8 @@
       = render :partial => "tutorials/teacher/qzb/#{m}"
     - ['one', 'two', 'three'].each do |m|
       = render :partial => "tutorials/teacher/wsb/#{m}"
+    - ['one', 'two', 'three', 'four', 'five', 'six'].each do |m|
+      = render :partial => "tutorials/teacher/editqz/#{m}"
 
 !!!5
 
