--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -7,6 +7,9 @@
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
       :class => 'help-launcher', :launch => 'wsb-milestone-1'
+  %li
+    = simple_link :for => "Edit an existing quiz", :id => 'help-edit-quiz',
+      :class => 'help-launcher', :launch => 'editqz-milestone-1'
 -#
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
