--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -3,13 +3,16 @@
   %li.nav-header= "How do I ...?"
   %li
     = simple_link :for => "Make a Quiz", :id => 'help-make-a-quiz', 
-      :class => 'help-launcher', :launch => 'qzb-milestone-1'
+      :class => 'help-launcher', :launch => 'qzb-milestone-1',
+      :autoclick => 'lnk-existing-quiz'
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
-      :class => 'help-launcher', :launch => 'wsb-milestone-1'
+      :class => 'help-launcher', :launch => 'wsb-milestone-1',
+      :autoclick => 'lnk-existing-quiz'
   %li
     = simple_link :for => "Edit an existing quiz", :id => 'help-edit-quiz',
-      :class => 'help-launcher', :launch => 'editqz-milestone-1'
+      :class => 'help-launcher', :launch => 'editqz-milestone-1',
+      :autoclick => 'lnk-existing-quiz'
 -#
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
