minor edits here and there

--- a/app/views/tutorials/teacher/qzb/_three.html.haml
+++ b/app/views/tutorials/teacher/qzb/_three.html.haml
@@ -3,10 +3,11 @@
   %li{ :data => { :id => 'qzb-verticals-tab' } }
     %h6= "#3"
     %p
-      Within verticals are <b>topics</b>. Select the topics 
-      you would like to see questions on
+      Within verticals are <b>topics</b>. For example, these are the topics within 
+      the vertical you just selected
     %p
-      To add topics in other verticals, select those verticals
-      and then pick topics - like you did now
+      Select topics you would like to see questions on. 
+      To add topics in other verticals, repeat the last step <b>(#2)</b> 
+      and then this step <b>(#3)</b>
     %p
-      When you are done, click the <b>Show Questions</b> button above
+      When you are done picking topics, click the <b>Show Questions</b> button above
