--- a/app/views/tutorials/teacher/qzb/_six.html.haml
+++ b/app/views/tutorials/teacher/qzb/_six.html.haml
@@ -4,5 +4,6 @@
     %h6= "#6"
     %p
       When you are done picking questions, <b>give the quiz a name</b>. 
-      Any name is a good name as long as it makes sense to you.
-      Finally, click the <b>Build Quiz</b> button
+      Any name is a good name as long as it makes sense to you
+    %p
+      Then, click the <b>Build Quiz</b> button
