First draft of publish-ws tutorial

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -34,6 +34,8 @@
       = render :partial => "tutorials/teacher/wsb/#{m}"
     - ['one', 'two', 'three', 'four', 'five', 'six'].each do |m|
       = render :partial => "tutorials/teacher/editqz/#{m}"
+    - ['one', 'two'].each do |m|
+      = render :partial => "tutorials/teacher/publish-ws/#{m}"
 
 !!!5
 
