--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -13,6 +13,10 @@
     = simple_link :for => "Edit an existing quiz", :id => 'help-edit-quiz',
       :class => 'help-launcher', :launch => 'editqz-milestone-1',
       :autoclick => 'lnk-existing-quiz'
+  %li
+    = simple_link :for => "Publish a worksheet", :id => 'help-publish-ws',
+      :class => 'help-launcher', :launch => 'publish-milestone-1',
+      :autoclick => 'lnk-existing-quiz'
 -#
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
