--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -19,6 +19,13 @@ $green: #347235 ; // rgb(87,188,32)
   margin-top: 20px ;
 } 
 
+.subtext { 
+  color: $orange ;
+  font-size: 13px ;
+  padding: 3px ;
+  text-transform: lowercase ;
+}
+
 .navbar-inverse, .dropdown-menu {
   li { 
     > a { color: white ; }
@@ -59,9 +66,7 @@ $green: #347235 ; // rgb(87,188,32)
       font-size: 11px ;
       color: white ;
       > .subtext { 
-        color: $orange ; 
         font-size: 10px ;
-        text-transform: lowercase ;
       }
     }
   } 
@@ -221,14 +226,14 @@ $green: #347235 ; // rgb(87,188,32)
     bottom: 2px ;
   } 
   min-height: 24px ;
-  font-size: 11px ; 
+  font-size: 11.5px ; 
   cursor: pointer ; 
   color: white ;
   text-transform: lowercase ; 
   border-bottom: 1px solid $lightgray ; 
   
   &:hover {
-    font-weight: 500 ;
+    font-weight: 600 ;
   } 
   &.selected {
     > .dropdown { > a { color: white ; } }
@@ -269,9 +274,8 @@ $green: #347235 ; // rgb(87,188,32)
 
   .subtext { 
     font-size: 10px ;
-    color: $orange ; 
-    text-transform: lowercase ; 
     text-align: right ;
+    padding: 0px ;
   } 
 
   .badge { 
