First draft of tutorial on how to add a section

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -36,6 +36,8 @@
       = render :partial => "tutorials/teacher/editqz/#{m}"
     - ['one', 'two'].each do |m|
       = render :partial => "tutorials/teacher/publish-ws/#{m}"
+    - ['one', 'two', 'three', 'four'].each do |m|
+      = render :partial => "tutorials/teacher/mng-sektions/#{m}"
 
 !!!5
 
