--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -17,6 +17,9 @@
     = simple_link :for => "Publish a worksheet", :id => 'help-publish-ws',
       :class => 'help-launcher', :launch => 'publish-milestone-1',
       :autoclick => 'lnk-existing-quiz'
+  %li
+    = simple_link :for => "Create a section / study-group", :id => 'help-mng-sektion',
+      :class => 'help-launcher', :launch => 'mng-sektions-milestone-1'
 -#
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
