An introductory, one-step tutorial for when a teacher first logs in
- directing her to the 'Help' section

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -38,6 +38,8 @@
       = render :partial => "tutorials/teacher/publish-ws/#{m}"
     - ['one', 'two', 'three', 'four'].each do |m|
       = render :partial => "tutorials/teacher/mng-sektions/#{m}"
+    - ['one'].each do |m|
+      = render :partial => "tutorials/teacher/welcome/#{m}"
 
 !!!5
 
