--- a/app/views/tutorials/teacher/welcome/_one.html.haml
+++ b/app/views/tutorials/teacher/welcome/_one.html.haml
@@ -4,8 +4,8 @@
     %p
       <b>Hello, and welcome to Gradians.com</b>
     %p
-      You seem to be new to Gradians.com. So we thought we will let you 
-      know that as you try to use the site, help is available and is available here
+      You seem to be new to Gradians.com. And so, we just want to let you  
+      know that as you use the site, help is available and is available here
     %p
       As a first step, we would encourage you to <b>try making a quiz</b>.
       Its the best way to get familiar with the site
