Doule submission of wsb form fixed (hopefully)
Also, removed publish button from WSB. Teachers can always
publish using the contextual menu

--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -15,7 +15,7 @@
         .btn-group
           = simple_button :icon => 'icon-align-justify', :id => 'select-all-for-quiz',
             :tooltip => "Select All", :placement => :right
-          = simple_button :icon => 'icon-envelope', :id => 'btn-publish-ws', :toggle => :button,
+          -#= simple_button :icon => 'icon-envelope', :id => 'btn-publish-ws', :toggle => :button,
             :tooltip => "Send PDFs to students", :class => 'btn-primary', :placement => :right
         .btn-group
           = simple_button :icon => 'icon-wrench', :id => 'build-worksheet', :for => "Make PDF"
