--- a/app/views/menus/teacher/_rc.html.haml
+++ b/app/views/menus/teacher/_rc.html.haml
@@ -3,4 +3,4 @@
   %li
     = simple_link :for => "All Worksheets", :id => 'lnk-tc-rc'
   %li
-    = simple_link :for => "Deep Dive", :id => 'lnk-rc-deepdive'
+    = simple_link :for => "Analysis", :id => 'lnk-rc-deepdive'
