--- a/app/views/tutorials/teacher/welcome/_one.html.haml
+++ b/app/views/tutorials/teacher/welcome/_one.html.haml
@@ -5,7 +5,9 @@
       <b>Hello, and welcome to Gradians.com</b>
     %p
       You seem to be new to Gradians.com. And so, we just want to let you  
-      know that as you use the site, help is available and is available here
+      know that as you use the site, help is available and it is available here
     %p
-      As a first step, we would encourage you to <b>try making a quiz</b>.
+      As a first step, we would encourage you to <b>Make a Quiz</b>.
       Its the best way to get familiar with the site
+    %p
+      <b>Abhinav & Akshay</b><br/>Co-founders
