--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -1,6 +1,5 @@
 
 %ul.dropdown-menu.dropdown-inverse#howto-guides{ :role => :menu }
-  %li.nav-header= "How do I ...?"
   %li
     = simple_link :for => "Make a Quiz", :id => 'help-make-a-quiz', 
       :class => 'help-launcher', :launch => 'qzb-milestone-1',
@@ -18,8 +17,11 @@
       :class => 'help-launcher', :launch => 'publish-milestone-1',
       :autoclick => 'lnk-existing-quiz'
   %li
-    = simple_link :for => "Create a section / study-group", :id => 'help-mng-sektion',
+    = simple_link :for => "Manage Study Groups", :id => 'help-mng-sektion',
       :class => 'help-launcher', :launch => 'mng-sektions-milestone-1'
+  %li
+    = simple_link :for => "Upload Scans", :id => 'help-upload-scans',
+      :class => 'help-launcher', :launch => 'upload-scans-milestone-1'
 -#
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
