--- a/app/views/menus/teacher/_workbench.html.haml
+++ b/app/views/menus/teacher/_workbench.html.haml
@@ -1,16 +1,14 @@
 
 %ul.dropdown-menu.dropdown-inverse#teacher-workbench{ :role => :menu }
   %li
-    = simple_link :for => "Grading Work (pending)", :id => 'lnk-wb-pending'
+    = simple_link :for => "Grade Scans", :id => 'lnk-wb-pending'
   %li
     = simple_link :for => "Upload Questions", :id => 'lnk-upload-suggestion', :href => "#m-suggestion-upload"
   %li
-    = simple_link :for => "Manage Section / Study Groups", :id => 'lnk-mng-sektions'
+    = simple_link :for => "Manage Study Groups", :id => 'lnk-mng-sektions'
   %li
     %a{ :href => "#{server}/winbot/app.publish/winbot.application"}
-      Scanning Application (Windows)
-    %p.footnote
-      Use to send scans to Gradians.com. Download on the PC connected to your scanner
+      Upload Scans (downloadable app)
 -#
   %li
     = simple_link :for => "Using suggestion form", :id => 'lnk-suggestion-form',
