- improvements to look and behaviour of 'upload suggestion' dialog

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -132,6 +132,10 @@ $green: #347235 ; // rgb(87,188,32)
 } 
 
 .modal { 
+  &.medium { 
+    width: 460px ;
+  } 
+
   &.narrow { 
     width: 350px ;
   } 
