--- a/app/views/modals/teacher/_suggestion.html.haml
+++ b/app/views/modals/teacher/_suggestion.html.haml
@@ -1,20 +1,14 @@
 
-#m-suggestion-upload.modal.fade.hide
+#m-suggestion-upload.modal.fade.hide.medium
 
-  .modal-header
-    %h3= "Please upload the Question and its Solution"
+  .modal-header 
+    %button.close{ "data-dismiss" => "modal", "aria-hidden" => "true"}= "x"
+    %h4= "Please upload file containing Question and Solution"
   .modal-body
     #instruction
-      %p.lead
-        Browse to a file on your computer to upload it for type setting. 
-        Doesn't matter if it is a jpg, txt, doc, docx, pdf or any other
-        file format, as long as it follows the following simple rules:
-      %ul
-        %li It contains the Question in it's entirety and a numerical answer, if any, for cross-checking purposes
-        %li It does NOT cite references such as books or papers as we cannot honor these 
-        %li 
-          If there is a preferred solution, it is provided alongside (if not, we will solve it). 
-    %br
+      %p 
+        <small class="text-warning">Do <bold>not</bold> cite references from books, papers etc.</small><br/>
+        <small class="text-warning">Most file formats <em>(doc, docx, odt, pdf, jpeg, tiff etc)</em> are accepted</small>
     %form.center{ :id => "suggestiondoc", :enctype => "multipart/form-data" }
       .control-group
         .controls
@@ -23,4 +17,3 @@
           %button.btn.btn-primary{ :id => "uploadbtn", :type => :button }= "Upload"
     #ackblurb{ :style => "display: none" } 
       %p 
-      %button.btn.btn-primary{ :id => "dismissbtn", :type => :button }= "Dismiss"
