--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
   #toolbox.hidden 
     = render :partial => 'menus/user/register', :locals => { :server => server }
   #modals
+    = render :partial => 'notifications/registered'
 
 !!!5
 
