--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -600,7 +600,7 @@ a.text-success:hover {
 h1, h2, h3, h4, h5, h6 {
   margin: 7px 0;
   font-family: inherit;
-  font-weight: bold;
+  font-weight: 300;
   line-height: 14px;
   color: inherit;
   text-rendering: optimizelegibility;
@@ -5008,8 +5008,8 @@ a.thumbnail:hover {
 
 .modal {
   position: fixed;
-  top: 70%;
-  left: 50%;
+  top: 250px;
+  left: 60%;
   z-index: 1050;
   width: 560px;
   margin: -250px 0 0 -280px;
