Added - but not using - code for setting notification messages based on passed JSON

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -26,7 +26,7 @@
   #modal-forms
     = render :partial => 'modals/user/account'
     = render :partial => 'modals/teacher/suggestion'
-  #notifications.hidden
+  #notifications
 
 - content_for :tutorials do 
   #tutorials
