--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -232,7 +232,8 @@ $green: #347235 ; // rgb(87,188,32)
   border-bottom: 1px solid $lightgray ; 
   
   &:hover {
-    font-weight: 600 ;
+    // font-weight: 600 ;
+    border-bottom: 2px solid $orange ;
   } 
   &.selected {
     > .dropdown { > a { color: white ; } }
