First bits of scaffolding for polling delayed jobs queue
The aim is to be able to
  1. give an accurate estimate for when a quiz / testpaper would be done compiling
  2. if the user sticks around, and compilation finishes, then to let the user know
     that too

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -30,7 +30,7 @@
 
 - content_for :tutorials do 
   #tutorials
-    - ['one', 'two', 'three', 'four', 'five', 'six', 'seven'].each do |m|
+    - ['one', 'three', 'five', 'six', 'seven'].each do |m|
       = render :partial => "tutorials/teacher/qzb/#{m}"
     - ['one', 'two', 'three'].each do |m|
       = render :partial => "tutorials/teacher/wsb/#{m}"
