--- a/app/views/menus/teacher/_qz-main.html.haml
+++ b/app/views/menus/teacher/_qz-main.html.haml
@@ -3,6 +3,6 @@
 
 %ul#teacher-quiz.dropdown-menu.pull-right{ :role => :menu }
   %li
-    = simple_link :for => "New", :id => "lnk-new-quiz", :launch => 'qzb-milestone-2'
+    = simple_link :for => "New", :id => "lnk-new-quiz"
   %li
     = simple_link :for => "List", :id => 'lnk-existing-quiz'
