--- a/app/views/tutorials/teacher/qzb/_one.html.haml
+++ b/app/views/tutorials/teacher/qzb/_one.html.haml
@@ -4,4 +4,4 @@
   %li{ :data => { :id => 'm-teacher-quizzes' } }
     %h6= "#1"
     %p
-      Click here and then select <b>new</b> from the menu
+      Click on <b>Quizzes</b> and then select <b>New</b> from the menu
