--- a/app/views/tutorials/teacher/qzb/_three.html.haml
+++ b/app/views/tutorials/teacher/qzb/_three.html.haml
@@ -1,13 +1,12 @@
 
 %ol.hide{ :id => 'qzb-milestone-3', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
   %li{ :data => { :id => 'qzb-verticals-tab' } }
-    %h6= "#3"
+    %h6= "#2"
     %p
-      Within verticals are <b>topics</b>. For example, these are the topics within 
-      the vertical you just selected
+      Pick the <b>topics</b> you would like to see questions on. 
+      Topics are <b>grouped by</b> the broad areas of study - or <b>verticals</b>
     %p
-      Select topics you would like to see questions on. 
-      To add topics in other verticals, repeat the last step <b>(#2)</b> 
-      and then this step <b>(#3)</b>
+      You can pick any topic in any vertical for your quiz. For example, you could 
+      pick one topic from Probability and two from Trigonometry
     %p
       When you are done picking topics, click the <b>Show Questions</b> button above
