--- a/app/views/tutorials/teacher/qzb/_five.html.haml
+++ b/app/views/tutorials/teacher/qzb/_five.html.haml
@@ -1,12 +1,12 @@
 
 %ol.hide{ :id => 'qzb-milestone-5', :data => { :enable => 'm-teacher-quizzes', :onwards => :true }}
   %li{ :data => { :id => 'qzb-div-milestone-5' } }
-    %h6= "#5"
+    %h6= "#3"
     %p
-      And here are questions on the selected topic
+      And here are the questions - grouped by the topics you picked
     %p
-      Clicking on a question loads its preview <b>and</b> selects
-      it for the quiz. Clicking it again unselects it
+      Click on a question to load its preview. Click on the <i class='icon-plus-sign'></i> to 
+      select it for the quiz
     %p
       Note that many questions have multiple versions -  
       that is - each student will get that question with 
