First attempt at polling delayed job queue for status

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -27,6 +27,7 @@
     = render :partial => 'modals/user/account'
     = render :partial => 'modals/teacher/suggestion'
   #notifications
+    = render :partial => 'notifications/quiz-compiled'
 
 - content_for :tutorials do 
   #tutorials
