minor styling change

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -162,6 +162,10 @@ $green: #347235 ; // rgb(87,188,32)
   .control-label {
     color: white ;
   }
+
+  ul {
+    color: white ;
+  }
 } 
 
 #lnk-logout{ color: $orange ; }
