Trimmed quiz-builder tutorial

--- a/app/views/tutorials/teacher/qzb/_seven.html.haml
+++ b/app/views/tutorials/teacher/qzb/_seven.html.haml
@@ -1,24 +1,19 @@
 
-%ol.hide{ :id => 'qzb-milestone-7', 
-  :data => { :enable => 'm-notifications', 
-             :onwards => :true, 
-             :options => 'startTimerOnClick:false;timer:6000' } }
-  %li{ :data => { :id => 'm-notifications', :options => "tipLocation:bottom;nubPosition:top" } }
-    %h6= "#7"
+%ol.hide{ :id => 'qzb-milestone-7' }
+  %li{ :data => { :id => 'left-1' } }
+    %h6= "#5"
     %p
-      A <b>blinking bell</b> means that our system has received your request for making the quiz
+      The quiz you just made is now listed here along with your other quizzes. 
+      Also shown is the <b>estimated time</b> after which the PDF for the quiz 
+      would be ready and available for download
     %p
-      <b>Click on the bell</b> to know the <b>estimated time</b> after which your quiz will be ready
+      The reason you might have to wait a bit is because making 
+      a PDF takes a little time. Moreover, your request for a PDF is <b>placed in 
+      a queue</b>. And so, it might be some time before your request gets to 
+      the front of the queue and another 40-60 seconds for it to be processed
     %p
-      The reason you might have to wait a bit is because all requests are placed in 
-      a queue and are processed in the order in which they are received. And there 
-      might be other requests before yours
-
-  %li{ :data => { :id => 'm-teacher-quizzes', :options => "tipLocation:bottom;nubPosition:top" } }
-    %h6= "#8"
+      <b>However, you do not need to stay logged-in and wait</b>. If there is nothing 
+      else you'd like to do at this time, then by all means log out. Your request is safe
+      with us
     %p
-      <b>That's it!</b>. You are done making the quiz and can either <b>continue
-      using the site</b> as normal <b>or</b> even <b>logout</b>
-    %p
-      <b>To see the quiz you just made</b>, click here and select <b>List</b> 
-      after the time reported in the last step
+      <b>Close this pop-up to end the tutorial</b>
