--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -823,3 +823,10 @@ a#m-registrations + ul {
   color: $orange ;
 } 
 
+#main-marketing-contact-etc { 
+  color: white ;
+  font-weight: 300 ;
+  h1, h2, h3, h4, h5, h6 {
+    color: $orange ; 
+  }
+}
