--- a/app/views/menus/teacher/_workbench.html.haml
+++ b/app/views/menus/teacher/_workbench.html.haml
@@ -8,7 +8,7 @@
     = simple_link :for => "Manage Study Groups", :id => 'lnk-mng-sektions'
   %li
     %a{ :href => "#{server}/winbot/app.publish/winbot.application"}
-      Upload Scans (downloadable app)
+      Upload Scans (Windows only)
 -#
   %li
     = simple_link :for => "Using suggestion form", :id => 'lnk-suggestion-form',
