--- a/app/views/tutorials/teacher/upload-scans/_one.html.haml
+++ b/app/views/tutorials/teacher/upload-scans/_one.html.haml
@@ -4,4 +4,4 @@
   %li{ :data => { :id => 'm-teacher-workbench' } }
     %h6= "#1"
     %p
-      Click here and select <b>Upload Scans</b> from the menu. Allow application to download and install.
+      Click here and select <b>Upload Scans</b> from the menu. Allow the app <b>Scanbot</b> to download and then install.
